Remade broadcaster singleton. However it is not yet functional. Added factory loading in that singleton. Added population job in PlayerData. Finished PlayerData. Divided network and graphical observers. Added codes

--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,20 @@
     <groupId>hr.makazas</groupId>
     <artifactId>MeteorPlayer</artifactId>
     <version>0.1</version>
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.openjfx/javafx-base -->
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-base</artifactId>
+            <version>11</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.openjfx/javafx-media -->
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-media</artifactId>
+            <version>11</version>
+        </dependency>
 
+    </dependencies>
 
 </project>
